--- a/hw/hw4/hw4.ipynb
+++ b/hw/hw4/hw4.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "1. Show that $\\mathbf{H}$ is symmetric and orthogonal.\n",
     "\n",
-    "2. Let $\\mathbf{a}, \\mathbf{b} \\in \\mathbb{R}^n$ such that $\\|\\mathbf{a}\\| = \\|\\mathbf{b}\\|$. Find a Household matrix such that $\\mathbf{H} \\mathbf{a} = \\mathbf{b}$.\n",
+    "2. Let $\\mathbf{a}, \\mathbf{b} \\in \\mathbb{R}^n$ such that $\\|\\mathbf{a}\\| = \\|\\mathbf{b}\\|$. Find a Householder matrix such that $\\mathbf{H} \\mathbf{a} = \\mathbf{b}$.\n",
     "\n",
     "3. Let $\\mathbf{a} \\in \\mathbb{R}^n$ be a non-zero vector. Find a Householder matrix such that\n",
     "$$\n",
@@ -67,7 +67,7 @@
     "$$\n",
     "\\mathbf{H}_{p} \\mathbf{H}_{p-1} \\cdots \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R},\n",
     "$$\n",
-    "where $\\mathbf{R} \\in \\mathbb{R}^{n \\times p}$ is an upper triangular matrix.\n",
+    "where $\\mathbf{R} \\in \\mathbb{R}^{n \\times p}$ is an upper triangular matrix.  \n",
     "\n",
     "    Describe how this generates a full QR decomposition of matrix $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$, where $\\mathbf{Q} \\in \\mathbb{R}^{n \\times n}$ is an orthogonal matrix and $\\mathbf{R}$ is upper triangular.\n",
     "\n",
