--- a/_posts/2023-11-14-week7-day1.md
+++ b/_posts/2023-11-14-week7-day1.md
@@ -8,6 +8,10 @@ category: biostat216fall2023
 
 - HW5, due Fri 11/17 @ 11:59pm. 
 
+## Q&A
+
+- Why is the volume of a parallelepiped the determinant of the matrix whose columns are the vectors defining the parallelepiped? Let $\mathbf{A} = \mathbf{Q} \mathbf{R}$ be the QR factorization. Then the volume of the parallelepiped defined by the columns of $\mathbf{A}$ is the product of diagonal entries of $\mathbf{R}$.
+
 ## Today
 
 - Matrix determinant.
