--- a/slides/13-optim/13-optim.ipynb
+++ b/slides/13-optim/13-optim.ipynb
@@ -5496,16 +5496,19 @@
    "lastKernelId": null
   },
   "hide_input": false,
+  "jupytext": {
+   "formats": "ipynb,qmd"
+  },
   "kernelspec": {
-   "display_name": "Julia 1.8.3",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.3"
+   "version": "1.9.3"
   },
   "toc": {
    "colors": {
