--- a/slides/12-svd/12-svd.ipynb
+++ b/slides/12-svd/12-svd.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "toc": "true"
    },
-   "outputs": [],
    "source": [
     "---\n",
     "title:  Singular Value Decomposition (SVD) (BR Chapter 12)\n",
@@ -610,7 +608,11 @@
     "$$\n",
     "\\mathbf{u}_i = \\frac{\\mathbf{A} \\mathbf{v}_i}{\\sigma_i}, \\quad i = 1,\\ldots,r.\n",
     "$$\n",
-    "Verify that $\\mathbf{u}_i$ are orthonormal. Lastly, augment $\\mathbf{u}_i$s by an orthonormal basis in $\\mathcal{N}(\\mathbf{A}')$ and augment $\\mathbf{v}_i$s by an orthonormal basis in $\\mathcal{N}(\\mathbf{A})$."
+    "Verify that $\\mathbf{u}_i$ are orthonormal. Lastly, augment $\\mathbf{u}_i$s by an orthonormal basis in $\\mathcal{N}(\\mathbf{A}') = \\mathcal{N}(\\mathbf{A} \\mathbf{A}')$ and augment $\\mathbf{v}_i$s by an orthonormal basis in $\\mathcal{N}(\\mathbf{A}) = \\mathcal{N}(\\mathbf{A}' \\mathbf{A})$. Finally we verify that\n",
+    "$$\n",
+    "\\sum_{i=1}^r \\sigma_i \\mathbf{u}_i \\mathbf{v}_i' = \\sum_{i=1}^r \\sigma_i \\frac{\\mathbf{A} \\mathbf{v}_i}{\\sigma_i} \\mathbf{v}_i = \\mathbf{A} \\sum_{i=1}^r \\mathbf{v}_i \\mathbf{v_i}' = \\mathbf{A} \\sum_{i=1}^n \\mathbf{v}_i \\mathbf{v}_i' = \\mathbf{A} \\mathbf{I} = \\mathbf{A}.\n",
+    "$$\n",
+    "The third equality is because $\\mathbf{v}_i \\in \\mathcal{N}(\\mathbf{A})$ for $i=r+1,\\ldots,n$."
    ]
   },
   {
