--- a/slides/08-ls/08-ls.ipynb
+++ b/slides/08-ls/08-ls.ipynb
@@ -115,7 +115,7 @@
     "- Now we know the normal equation is always consistent and we want to find all solution(s). In general the least squares solution can be represented as\n",
     "\\begin{eqnarray*}\n",
     "& & (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} + [\\mathbf{I} - (\\mathbf{A}' \\mathbf{A})^- (\\mathbf{A}' \\mathbf{A})] \\mathbf{q} \\\\\n",
-    "&=& (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} + (\\mathbf{I} - \\mathbf{A}^- \\mathbf{A}') \\mathbf{q},\n",
+    "&=& (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} + (\\mathbf{I} - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q},\n",
     "\\end{eqnarray*}\n",
     "where $\\mathbf{q}$ is arbitrary. One specific solution is \n",
     "\\begin{eqnarray*}\n",
