--- a/slides/12-svd/12-svd.ipynb
+++ b/slides/12-svd/12-svd.ipynb
@@ -610,7 +610,7 @@
     "$$\n",
     "Verify that $\\mathbf{u}_i$ are orthonormal. Lastly, augment $\\mathbf{u}_i$s by an orthonormal basis in $\\mathcal{N}(\\mathbf{A}') = \\mathcal{N}(\\mathbf{A} \\mathbf{A}')$ and augment $\\mathbf{v}_i$s by an orthonormal basis in $\\mathcal{N}(\\mathbf{A}) = \\mathcal{N}(\\mathbf{A}' \\mathbf{A})$. Finally we verify that\n",
     "$$\n",
-    "\\sum_{i=1}^r \\sigma_i \\mathbf{u}_i \\mathbf{v}_i' = \\sum_{i=1}^r \\sigma_i \\frac{\\mathbf{A} \\mathbf{v}_i}{\\sigma_i} \\mathbf{v}_i = \\mathbf{A} \\sum_{i=1}^r \\mathbf{v}_i \\mathbf{v_i}' = \\mathbf{A} \\sum_{i=1}^n \\mathbf{v}_i \\mathbf{v}_i' = \\mathbf{A} \\mathbf{I} = \\mathbf{A}.\n",
+    "\\sum_{i=1}^r \\sigma_i \\mathbf{u}_i \\mathbf{v}_i' = \\sum_{i=1}^r \\sigma_i \\frac{\\mathbf{A} \\mathbf{v}_i}{\\sigma_i} \\mathbf{v}_i' = \\mathbf{A} \\sum_{i=1}^r \\mathbf{v}_i \\mathbf{v_i}' = \\mathbf{A} \\sum_{i=1}^n \\mathbf{v}_i \\mathbf{v}_i' = \\mathbf{A} \\mathbf{I} = \\mathbf{A}.\n",
     "$$\n",
     "The third equality is because $\\mathbf{v}_i \\in \\mathcal{N}(\\mathbf{A})$ for $i=r+1,\\ldots,n$."
    ]
@@ -1869,17 +1869,14 @@
     "    \n",
     "- **Submatrices have smaller singular values**. Let $\\mathbf{B}$ be a submatrix of $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$. Then\n",
     "$$\n",
-    "\\|\\mathbf{B}\\| \\le \\|\\mathbf{A}\\|\n",
+    "\\|\\mathbf{B}\\|_2 \\le \\|\\mathbf{A}\\|_2\n",
     "$$\n",
     "or equivalently\n",
     "$$\n",
     "\\sigma_1 (\\mathbf{B}) \\le \\sigma_1 (\\mathbf{A}).\n",
     "$$\n",
     "\n",
-    "    Proof: Let $\\tilde{\\mathbf{y}} \\in \\mathbb{R}^n$ hold corresponding entries in $\\mathbf{y}$ and be zero elsewhere. Then\n",
-    "$$\n",
-    "\\sigma_1 (\\mathbf{B}) = \\max_{\\mathbf{y}} \\frac{\\|\\mathbf{B} \\mathbf{y}\\|}{\\|\\mathbf{y}\\|} \\le \\max_{\\tilde{\\mathbf{y}}} \\frac{\\|\\mathbf{A} \\tilde{\\mathbf{y}}\\|}{\\|\\tilde{\\mathbf{y}}\\|} \\le \\max_{\\mathbf{x}} \\frac{\\|\\mathbf{A} \\mathbf{x}\\|}{\\|\\mathbf{x}\\|} = \\sigma_1 (\\mathbf{A}).\n",
-    "$$"
+    "    Proof: HW6 Q12. Hint: use Rayleigh quotient."
    ]
   },
   {
