--- a/slides/13-optim/13-optim.ipynb
+++ b/slides/13-optim/13-optim.ipynb
@@ -4826,11 +4826,29 @@
    "source": [
     "## Chain rule for multivariate calculus\n",
     "\n",
-    "* Taking derivative and Hessian of functions with vector or matrix argument can be frustrating. The key is to adopt a consistent notation that enables chain rule. Familiarize yourself with the content of this [lecture](https://ucla-biostat216-2019fall.github.io/slides/16-matrixcalc/16-matrixcalc.html). It can be one of the most useful notes for your graduate study or even research projects.\n",
+    "* Taking derivative and Hessian of functions with vector or matrix argument can be frustrating. The key is to adopt a consistent notation that enables chain rule. Familiarize yourself with the content of this [lecture](https://ucla-biostat216-2019fall.github.io/slides/16-matrixcalc/16-matrixcalc.html). It can be one of the most useful notes for your graduate study and research projects.\n",
     "\n",
     "* Some notations such as Kronecker product and commutation matrix appear in the above lecture note. Basic properties of these matrices are summarized in this [lecture note](https://ucla-biostat216-2019fall.github.io/slides/13-kron/13-kron.html).\n",
     "\n",
-    "* We will practice use of these results in homework problems."
+    "* We will practice use of these results in homework problems.\n",
+    "\n",
+    "* Exercise: Take derivative of the [Rayleigh quotient](https://ucla-biostat-216.github.io/2023fall/slides/12-svd/12-svd.html#singular-vectors-and-rayleigh-quotient).\n",
+    "\n",
+    "* Exercise: Take derivative of the function $f(\\mathbf{C}, \\mathbf{R}) = \\|\\mathbf{A} - \\mathbf{C} \\mathbf{R}\\|_{\\text{F}}^2$ in the proof of the [Eckart-Young theorem](https://ucla-biostat-216.github.io/2023fall/slides/12-svd/12-svd.html#eckart-young-theorem-best-approximation-to-a-matrix).\n",
+    "\n",
+    "* Exercise: [HW6 Q17](https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q17-mle-of-multivariate-normal). Take derivative of the multivariate normal log-density.\n",
+    "\n",
+    "* Exercise: [HW6 Q20](https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q20-procrustes-rotation). Take derivative of the Procrustes criterion function.\n",
+    "\n",
+    "* Exercise: [HW6 Q22](https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q22-factor-analysis). Take derivative of the factor analysis log-likelihood function. Hint: The answer is\n",
+    "\\begin{eqnarray*}\n",
+    "    \\frac{\\partial \\ell(\\mathbf{F}, \\mathbf{D})}{\\partial \\mathbf{F}} = - \\frac n2 \\boldsymbol{\\Omega}^{-1} \\mathbf{F} + \\frac n2 \\boldsymbol{\\Omega}^{-1} \\mathbf{S} \\boldsymbol{\\Omega}^{-1} \\mathbf{F}\n",
+    "\\end{eqnarray*}\n",
+    "and\n",
+    "\\begin{eqnarray*}\n",
+    "    \\frac{\\partial \\ell(\\mathbf{F}, \\mathbf{D})}{\\partial \\mathbf{D}} = - \\frac n2 \\text{diag} (\\boldsymbol{\\Omega}^{-1} -\\boldsymbol{\\Omega}^{-1} \\mathbf{S} \\boldsymbol{\\Omega}^{-1}),\n",
+    "\\end{eqnarray*}\n",
+    "where $\\boldsymbol{\\Omega} = \\mathbf{F} \\mathbf{F}' + \\mathbf{D}$."
    ]
   },
   {
@@ -5037,7 +5055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example: MLE of multinomial model\n",
+    "### Example: MLE of multinomial model\n",
     "\n",
     "Consider a multinomial experiment with $n$ trials and observed outcomes $n_1, \\ldots, n_m$ over $m$ categories. The maximum likelihood estimate (MLE) seeks maximizer of likelihood  \n",
     "$$\n",
@@ -5053,7 +5071,7 @@
     "$$  \n",
     "Solving  \n",
     "$$\n",
-    "\\frac{\\partial}{\\partial p_i} L = - \\frac{n_i}{p_i} + \\lambda = 0\n",
+    "\\frac{\\partial L}{\\partial p_i} = - \\frac{n_i}{p_i} + \\lambda = 0\n",
     "$$  \n",
     "gives  \n",
     "$$\n",
@@ -5065,6 +5083,20 @@
     "\\lambda^\\star &=& n.\n",
     "\\end{eqnarray*}\n",
     "Note the nonnegativity constraint is automatically satisfied."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example: [HW6, Q18](https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q18-smallest-matrix-subject-to-linear-constraints) (Smallest matrix subject to linear constraints)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example: [HW6, Q19](https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q19-minimizing-a-convex-quadratic-form-over-manifold) (Minimizing a convex quadratic form over manifold)"
    ]
   },
   {
