correct mistake in gradient of factor analysis model

--- a/slides/13-optim/13-optim.ipynb
+++ b/slides/13-optim/13-optim.ipynb
@@ -3359,7 +3359,7 @@
     "\n",
     "* Example: [HW6 Q22](https://ucla-biostat-216.github.io/2023fall/hw/hw6/hw6.html#q22-factor-analysis). Take derivative of the factor analysis log-likelihood function. Hint: The answer is\n",
     "\\begin{eqnarray*}\n",
-    "    \\frac{\\partial \\ell(\\mathbf{F}, \\mathbf{D})}{\\partial \\mathbf{F}} = - \\frac n2 \\boldsymbol{\\Omega}^{-1} \\mathbf{F} + \\frac n2 \\boldsymbol{\\Omega}^{-1} \\mathbf{S} \\boldsymbol{\\Omega}^{-1} \\mathbf{F}\n",
+    "    \\frac{\\partial \\ell(\\mathbf{F}, \\mathbf{D})}{\\partial \\mathbf{F}} = - n \\boldsymbol{\\Omega}^{-1} \\mathbf{F} + n \\boldsymbol{\\Omega}^{-1} \\mathbf{S} \\boldsymbol{\\Omega}^{-1} \\mathbf{F}\n",
     "\\end{eqnarray*}\n",
     "and\n",
     "\\begin{eqnarray*}\n",
