add Netflix example

--- a/_posts/2023-12-05-week10-day1.md
+++ b/_posts/2023-12-05-week10-day1.md
@@ -6,7 +6,9 @@ category: biostat216fall2023
 
 ## Today
 
-- Concluding remarks. Three pillars of machine learning: analysis/probability/statistics, linear algebra/optimization, and computing/computer science.
+- Concluding remarks. Three pillars of machine learning: analysis/probability/statistics, linear algebra/optimization, and computing/algorithms.
+
+- Some applications.
 
 - Multivariate calculus and optimization (cont'd).
 
