--- a/slides/14-app/14-app.ipynb
+++ b/slides/14-app/14-app.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -66,12 +66,23 @@
    "source": [
     "## Matrix completion\n",
     "\n",
-    "Load the 128×128 Lena picture with missing pixels."
+    "* Snapshot of the kind of data collected by Netflix. Only 100,480,507 ratings (1.2% entries of the 480K-by-18K matrix) are observed\n",
+    "\n",
+    "<img src=\"./netflix_matrix.png\" width=\"500\" align=\"center\"/>\n",
+    "\n",
+    "* Netflix challenge: impute the unobserved ratings for personalized recommendation.\n",
+    "http://en.wikipedia.org/wiki/Netflix_Prize\n",
+    "\n",
+    "<img src=\"./netflix_prize.png\" width=\"500\" align=\"center\"/>\n",
+    "\n",
+    "* **Matrix completion problem**. Observe a very sparse matrix $\\mathbf{Y} = (y_{ij})$. Want to impute all the missing entries. It is possible only when the matrix is structured, e.g., of _low rank_.\n",
+    "\n",
+    "* Example: Load the 128×128 Lena picture with missing pixels."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +213,7 @@
       "Acc:      Anderson Type2{QRDecomp},\n",
       "          Memory size = 15, RestartedMemory,\t\n",
       "          Safeguarded: true, tol: 2.0\n",
-      "Setup Time: 46.32ms\n",
+      "Setup Time: 35.32ms\n",
       "\n",
       "Iter:\tObjective:\tPrimal Res:\tDual Res:\tRho:\n",
       "1\t-1.4426e+03\t1.1678e+01\t5.9856e-01\t1.0000e-01\n",
@@ -228,9 +239,9 @@
       "Status: \u001b[32mSolved\u001b[39m\n",
       "Iterations: 100\n",
       "Optimal objective: 148\n",
-      "Runtime: 0.854s (853.9ms)\n",
+      "Runtime: 0.857s (856.75ms)\n",
       "\n",
-      "  0.955812 seconds (814.80 k allocations: 612.767 MiB, 10.52% gc time)\n"
+      "  1.242270 seconds (1.73 M allocations: 675.980 MiB, 5.35% gc time, 26.32% compilation time: 97% of which was recompilation)\n"
      ]
     }
    ],
@@ -238,7 +249,6 @@
     "# # Use COSMO solver\n",
     "using Convex, COSMO\n",
     "solver = COSMO.Optimizer()\n",
-    "\n",
     "\n",
     "# Linear indices of obs. entries\n",
     "obsidx = findall(Y[:] .≠ 0.0)\n",
@@ -253,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +422,7 @@
       "Acc:      Anderson Type2{QRDecomp},\n",
       "          Memory size = 15, RestartedMemory,\t\n",
       "          Safeguarded: true, tol: 2.0\n",
-      "Setup Time: 12.5ms\n",
+      "Setup Time: 12.68ms\n",
       "\n",
       "Iter:\tObjective:\tPrimal Res:\tDual Res:\tRho:\n",
       "1\t-8.1502e+03\t8.2930e+00\t5.9185e-01\t1.0000e-01\n",
@@ -420,13 +430,7 @@
       "50\t 1.2689e+01\t5.3738e-03\t2.4183e+00\t9.6243e+01\n",
       "75\t 1.0507e+01\t3.1550e-03\t1.3145e+00\t9.6243e+01\n",
       "100\t 7.6454e+00\t4.1015e-02\t2.7362e-01\t4.5260e+00\n",
-      "125\t 7.4592e+00\t6.9669e-03\t1.8184e-02\t8.9298e-01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "125\t 7.4592e+00\t6.9669e-03\t1.8184e-02\t8.9298e-01\n",
       "150\t 7.5387e+00\t1.2320e-08\t1.0120e-07\t8.9298e-01\n",
       "\n",
       "------------------------------------------------------------------\n",
@@ -434,9 +438,9 @@
       "Status: \u001b[32mSolved\u001b[39m\n",
       "Iterations: 156 (incl. 6 safeguarding iter)\n",
       "Optimal objective: 7.539\n",
-      "Runtime: 0.086s (85.83ms)\n",
+      "Runtime: 0.087s (86.52ms)\n",
       "\n",
-      "  0.103223 seconds (27.98 k allocations: 85.846 MiB)\n"
+      "  0.104188 seconds (27.94 k allocations: 85.837 MiB)\n"
      ]
     }
    ],
@@ -456,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -526,13 +530,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#112 (generic function with 1 method)"
+       "#21 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -546,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -737,13 +741,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#114 (generic function with 1 method)"
+       "#23 (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -757,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
