--- a/hw/hw4/hw4.ipynb
+++ b/hw/hw4/hw4.ipynb
@@ -79,7 +79,7 @@
     "|:------------------------------------:|:-:|:-----:|:-----:|:-----:|:-----:|\n",
     "|        $y$=Height (1000 miles)       | 0 | 0.008 | 0.015 | 0.019 | 0.020 |\n",
     "\n",
-    "Suppose that intelligence sources indicate that enemy missiles are programmed to follow a parabolic flight path: $y = f(x) = \\alpha_0 + \\alpha_1 x + \\alpha_2 x$. Where is the missile expected to land? Hint: You can find the solution using computer program. For example, in Julia, least squares solution is obtained by command `A \\ b`.\n",
+    "Suppose that intelligence sources indicate that enemy missiles are programmed to follow a parabolic flight path: $y = f(x) = \\alpha_0 + \\alpha_1 x + \\alpha_2 x^2$. Where is the missile expected to land? Hint: You can find the solution using computer program. For example, in Julia, least squares solution is obtained by command `A \\ b`.\n",
     "\n",
     "![](missile.png)\n",
     "\n",
