announcement for 12/7 lecture

--- a/_posts/2023-12-05-week10-day1.md
+++ b/_posts/2023-12-05-week10-day1.md
@@ -26,13 +26,7 @@ category: biostat216fall2023
 
 - HW6 Q13. Invariance of the spectral norm (L2), nuclear norm, and Frobenius norm under orthogonal rotation.
 
-- HW6 Q17. Alternative proof of global optimality of $\hat{\Omega}$ using Cholesky decomposition (optional). Denote the Cholesky decomposions $\boldsymbol{\Omega} = \mathbf{L} \mathbf{L}'$ and $\frac{\sum_{i=1}^n (\mathbf{y}_i - \hat{\boldsymbol{\mu}})(\mathbf{y}_i - \hat{\boldsymbol{\mu}})'}{n} = \mathbf{M} \mathbf{M}'$. Let $\mathbf{Z} =  \mathbf{L}^{-1} \mathbf{M}$, then
-\begin{eqnarray*}
-    \ell(\boldsymbol{\Omega}) &=& - \frac n2 \log \det \mathbf{L} \mathbf{L}' - \frac n2 \text{tr}( \mathbf{L}^{'-1} \mathbf{L}^{-1} \mathbf{M} \mathbf{M}') - \frac{n}{2} \log 2\pi \\
-    &=& n \log \det \mathbf{L}^{-1} \mathbf{M} - \frac n2 \|\mathbf{L}^{-1} \mathbf{M}\|_{\text{F}}^2 - n \log \det \mathbf{M} - \frac{n}{2} \log 2\pi \\
-    &=& n \sum_i \log z_{ii} - \frac n2 \sum_i z_{ii}^2 - \frac n2 \sum_{i > j} z_{ij}^2 - n \log \det \mathbf{M} - \frac{n}{2} \log 2\pi.
-\end{eqnarray*}
-The maximum occurs with $z_{ii} = 1$ and $z_{ij} = 0$ for $i > j$.
+- HW6 Q17. Alternative proof of global optimality of $\hat{\Omega}$ using Cholesky decomposition (optional).
 
 ## Q&A
 
