--- a/slides/06-orthproj/06-orthproj.ipynb
+++ b/slides/06-orthproj/06-orthproj.ipynb
@@ -204,7 +204,7 @@
     "\n",
     "<img src=\"./ls_projection.png\" width=400 align=\"center\"/>\n",
     "\n",
-    "1. The orthogonal projector of $\\mathbf{y}$ into $\\mathcal{C}(\\mathbf{X})$ is given by $\\mathbf{u} = \\mathbf{X} \\boldsymbol{\\beta}$, where $\\boldsymbol{\\beta}$ satisfies the **normal equation**\n",
+    "1. The orthogonal projection of $\\mathbf{y}$ into $\\mathcal{C}(\\mathbf{X})$ is given by $\\mathbf{u} = \\mathbf{X} \\boldsymbol{\\beta}$, where $\\boldsymbol{\\beta}$ satisfies the **normal equation**\n",
     "$$\n",
     "    \\mathbf{X}' \\mathbf{X} \\boldsymbol{\\beta} = \\mathbf{X}' \\mathbf{y}.\n",
     "$$\n",
