--- a/hw/hw4/hw4.ipynb
+++ b/hw/hw4/hw4.ipynb
@@ -31,7 +31,7 @@
     "$$\n",
     "\\mathbf{X}' \\mathbf{X} \\boldsymbol{\\beta} = \\mathbf{X}' \\mathbf{y}\n",
     "$$\n",
-    "always have at least one solution.\n",
+    "always has at least one solution.\n",
     "\n",
     "## Q2\n",
     "\n",
