--- a/hw/hw6/hw6.ipynb
+++ b/hw/hw6/hw6.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q9 (Raleigh quotient)\n",
+    "### Q9 (Rayleigh quotient)\n",
     "\n",
     "Suppose $\\mathbf{S}$ is positive definite with eigenvalues $\\lambda_1 \\ge \\lambda_2 \\ge \\cdots \\ge \\lambda_n > 0$ with corresponding orthonormal eigenvectors $\\mathbf{u}_1, \\mathbf{u}_2, \\ldots, \\mathbf{u}_n$. \n",
     "\n",
